force-app/main/default/objects/Order/fields/Kitchen_Status__c.field-meta.xml
<CustomField>
    <fullName>Kitchen_Status__c</fullName>
    <label>Kitchen Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
                <default>true</default>
                <label>Queued</label>
            </value>
            <value>
                <fullName>Preparing</fullName>
            </value>
            <value>
                <fullName>Prepared</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>