force-app/main/default/objects/Order/fields/Same_Day_Flag__c.field-meta.xml
<CustomField>
    <fullName>Same_Day_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Same-Day Flag</label>
    <type>Checkbox</type>
</CustomField>