force-app/main/default/objects/Order/fields/Scheduled_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Scheduled_Delivery_Date__c</fullName>
    <label>Scheduled Delivery Date</label>
    <type>DateTime</type>
</CustomField>