force-app/main/default/objects/Order/fields/Source_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Source_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Source Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Orders</relationshipLabel>
    <relationshipName>Bakeroo_Orders</relationshipName>
    <type>Lookup</type>
</CustomField>