force-app/main/default/objects/Order/recordTypes/Bulk_Scheduled_B2B.recordType-meta.xml
<RecordType>
    <fullName>Bulk_Scheduled_B2B</fullName>
    <active>true</active>
    <label>Bulk Scheduled (B2B)</label>
</RecordType>