force-app/main/default/objects/Order/recordTypes/Same_Day_B2C.recordType-meta.xml
<RecordType>
    <fullName>Same_Day_B2C</fullName>
    <active>true</active>
    <label>Same-Day (B2C)</label>
</RecordType>